Fri Jun 10 08:58:35 2005                        Michael Jennings (mej)

Minor typo fix.
----------------------------------------------------------------------
Mon Jul 11 19:52:00 2005                        Michael Jennings (mej)

Rename SCM object propset/propget routines to (permanently) avoid
conflict with SCM systems.

Fixed bug where default TARGET insisted on attempting to build DEB's.

Fall back on internal spec file parser if "rpm --eval" fails.

Added 2 new specgen templates for kernel modules.
----------------------------------------------------------------------
Thu Jul 21 13:40:07 2005                        Michael Jennings (mej)

A few minor CVS-related bugfixes related to missing keyword options
and branch tagging.
----------------------------------------------------------------------
Thu Jul 21 13:50:25 2005                        Michael Jennings (mej)

One last little tweak, and I'm calling this 1.8 final.
----------------------------------------------------------------------
Fri Jul 22 10:16:42 2005                        Michael Jennings (mej)

Now that 1.8 is out the door, here's the beginning of the 1.9 tree
with Subversion support.  This is a work in progress, so use caution.
----------------------------------------------------------------------
Tue Jul 26 18:24:30 2005                        Michael Jennings (mej)

Fixed mzstat, mzinfo, mzblame, mzdiff, and mzadd for Subversion.  Also
fixed some undefined return values in revtool.
----------------------------------------------------------------------
Wed Aug 31 15:24:18 2005                        Michael Jennings (mej)

Thanks to a brilliant suggestion from Jim Perrin <jperrin@gmail.com>,
there's now a Makefile to aid in bootstrapping the build/install of
mezzanine from CVS on a system that doesn't already have it.  I have
no idea why I didn't think of that before....

Also some cleanups and new kernel spec templates.
----------------------------------------------------------------------